# app/router.go
@@ -16,7 +16,10 @@ func NewRouter(categoryController controller.CategoryController, menuController 
 	router.DELETE("/api/categories/:categoryId", categoryController.Delete)
 
 	router.GET("/api/menu", menuController.FindAll)
+	router.GET("/api/menu/:categoryName/:menuName", menuController.FindbyName)
 	router.POST("/api/menu", menuController.Create)
+	router.PUT("/api/menu/:menuId", menuController.Update)
+	router.DELETE("/api/menu/:menuId", menuController.Delete)
 
 	router.PanicHandler = exception.ErrorHandler
 
